# fastapi_app

./: .env.example  .flake8  README.md  docker-compose.yml  mypy.ini
backend/: alembic.ini  main.py  pyproject.toml  startup.sh
backend/alchemy/: db.py  db_depends.py
backend/foodgram_fastapi/: settings.py
backend/migrations/: env.py
backend/migrations/versions/: 2024_10_11_17:47_initial_migration.py  2024_10_11_18:13_user_token.py  2024_10_13_21:39_user_subscription_model.py  2024_10_15_15:43_recipe_ingredient_tag_models.py  2024_10_17_17:47_favorited_shopping_list_models.py  2024_10_17_22:49_remove_file_limits.py
backend/models/: __init__.py  core.py  queries.py  recipe.py  user.py
backend/models/services/: exceptions.py  queries.py  validators.py
backend/repositories/: core_repositories.py  recipe_repositories.py  user_repositories.py
backend/routers/: auth.py  core.py  recipe.py  user.py
backend/routers/services/: pagination.py  security.py  utils.py  validators.py
backend/schemas/: auth.py  core.py  recipe.py  user.py
backend/shemas/: auth.py  user.py
nginx/: nginx.conf
